--- a/src/Pages/searchResult/components/searchContent.css
+++ b/src/Pages/searchResult/components/searchContent.css
@@ -1,3 +1,8 @@
+button{
+  cursor: pointer;
+}
+
+
 #Search-Content-ContainerBox {
   position: relative;
   top: 35%;
@@ -254,7 +259,10 @@
   background-color: #fff; /* Background color */
   border: 1px solid #dbd7d7;
 }
-
+.searchresult-item :hover{
+  /* text-decoration: underline; */
+    text-decoration-color: #0071bc;
+}
 .searchresult-item-header {
   display: flex;
   width: -webkit-fill-available;
@@ -271,13 +279,12 @@
   -webkit-text-fill-color: transparent;
   background-clip: text;
   position: relative;
-
+  text-decoration: none;
   text-fill-color: transparent;
 }
-/* .gradient-text:hover {
-  color: #205493;
-  font-weight: 600;
-} */
+.gradient-text:hover {
+  text-decoration: none;
+}
 .gradient-text::after {
   content: "";
   position: absolute;
@@ -304,6 +311,7 @@
   margin-bottom: 4px;
   cursor: pointer;
   margin-top: 0;
+  padding-bottom: 10px;
 }
 
 .searchresult-authors {
@@ -661,7 +669,7 @@ td {
   color: #010101;
   font-family: manrope;
   margin: auto;
-  margin-left: 3.5%;
+  /* margin-left: 3.5%; */
 }
 .contact-info h3 {
   margin: 0;
@@ -683,7 +691,7 @@ td {
   color: #010101;
   font-family: manrope;
   margin: auto;
-  margin-left: 3.5%;
+  /* margin-left: 3.5%; */
   width: 25%;
 }
 .resources h3 {
@@ -725,7 +733,7 @@ td {
   color: #010101;
   font-family: manrope;
   margin: auto;
-  margin-left: 3.5%;
+  /* margin-left: 3.5%; */
   width: 25%;
 }
 .newsletter h3 {
