--- a/src/Pages/Article Page/Components/ArticleContent.css
+++ b/src/Pages/Article Page/Components/ArticleContent.css
@@ -394,17 +394,17 @@
 
 .stream-input button {
   position: absolute;
-  height: 42px;
+  height: 35px;
   right: 0px;
   top: 50%;
   transform: translateY(-50%);
   padding: 5px 15px;
-  background-color: #007bff;
-  color: white;
+  background-color: #fff;
+  color: #007bff;
   border: none;
   border-radius: 20px;
   cursor: pointer;
-  margin-right: 3%;
+  margin-right: 1.5%
 }
 .stream-input-query {
   margin-bottom: 10px;
@@ -589,15 +589,17 @@ td {
 }
 .save-button {
   background-color: rgba(255, 255, 255, 1);
-  width: 20%;
+  width: 50%;
   height: 40px;
   border: none;
-  border-radius: 20px;
+  border-radius: 15px;
   cursor: pointer;
   font-size: 15px;
   color: rgba(26, 130, 255, 1);
   font-weight: 500;
   margin: 6px 6px 0 0;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .back-button{
