--- a/src/Pages/searchResult/components/searchContent.css
+++ b/src/Pages/searchResult/components/searchContent.css
@@ -9,19 +9,20 @@ button{
   width: 96%;
   /* height: 20vh; */
   border-radius: 20px;
+  padding: 0;
 }
 
 #Search-Content-Container {
   display: flex;
   /* position: absolute; */
   top: 45%;
-  width: 96%;
+  width: 100%;
   /* height: 100vh; */
   border-radius: 20px;
   background-size: cover;
   background-position: center;
   color: white;
-  margin: 2% 2% 2% 2%;
+  margin: 2% 0;
   /* margin-top: 30%; */
   padding: 0;
 }
@@ -258,6 +259,7 @@ button{
   border-radius: 12px;
   background-color: #fff; /* Background color */
   border: 1px solid #dbd7d7;
+  overflow: hidden;
 }
 .searchresult-item :hover{
   /* text-decoration: underline; */
@@ -615,15 +617,17 @@ td {
 }
 .search-save-button {
   background-color: rgba(255, 255, 255, 1);
-  width: 20%;
+  width: 50%;
   height: 40px;
   border: none;
-  border-radius: 20px;
+  border-radius: 15px;
   cursor: pointer;
   font-size: 15px;
   color: rgba(26, 130, 255, 1);
   font-weight: 500;
   margin: 6px 6px 0 0;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .search-table-head th {
   border-left: 1px solid #ddd;
