--- a/src/Pages/searchResult/components/searchHeader.css
+++ b/src/Pages/searchResult/components/searchHeader.css
@@ -98,11 +98,11 @@
   border: 1px solid #fff;
 }
 #SearchHeader-search-button{
-  left: 0;
+  left: 66%;
   position: absolute;
   /* margin-bottom: 10px; */
-  top: 15%;
-  right: 4%;
+  /* top: 15%; */
+  /* right: 4%; */
   color: white;
   border-radius: 25px;
   background: linear-gradient(94.96deg, #5ea7ff -9.81%, #8c1aff 119.93%);
