--- a/src/Pages/Landing Page/Components/LandingContent.css
+++ b/src/Pages/Landing Page/Components/LandingContent.css
@@ -26,7 +26,7 @@
     width: 100%;
     color: #010101;
     /* margin-top: 5%; */
-    /* margin-bottom: 5%; */
+    margin-bottom: 5%;
 }
 
 .WhyInfer-points{
