--- a/src/Pages/searchResult/components/searchContent.css
+++ b/src/Pages/searchResult/components/searchContent.css
@@ -192,7 +192,7 @@ button{
   opacity: 0px;
   color: rgba(26, 26, 26, 1);
 }
-.SearchResult-SendTo {
+.SearchResult-Annotate {
   padding: 10px;
   gap: 10px;
   border-radius: 40px;
