--- a/src/Pages/Landing Page/Components/LandingContent.css
+++ b/src/Pages/Landing Page/Components/LandingContent.css
@@ -7,7 +7,7 @@
     background-size: cover;
     background-position: center;
     color: white;
-    margin: 5% 2% 2% 2%;
+    /* margin: 5% 2% 2% 2%; */
     padding: 0;
 }
 
@@ -394,3 +394,101 @@ color: linear-gradient(90.5deg, #FE7675 30.57%, #CC81B9 45.01%, #19A8D2 73.04%);
     width: fit-content;
     color: #010101;
 }
+
+
+
+
+.carousel {
+    position: relative;
+    width: 80%;
+    margin: 5% auto;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .carousel-content {
+    display: flex;
+    width: 100%;
+    transition: transform 0.5s ease-in-out;
+  }
+  
+  .carousel-slide {
+    min-width: 100%;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+  }
+  
+  .carousel-slide.active {
+    opacity: 1;
+  }
+  
+  .card {
+    text-align: center;
+    padding: 20px;
+    background-color: #f1f1f1;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+  }
+  
+  .card-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 10px;
+  }
+  
+  .card-content {
+    font-size: 16px;
+    margin-top: 10px;
+  }
+  
+  .carousel-button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    /* background-color: rgba(0, 0, 0, 0.5); */
+    background-color: white;
+    color: black;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 10;
+  }
+  
+  .carousel-button.prev {
+    left: 10px;
+  }
+  
+  .carousel-button.next {
+    right: 10px;
+  }
+  
+  .carousel-button:hover {
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+  
+  .carousel-indicators {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  .indicator {
+    width: 10px;
+    height: 10px;
+    background-color: #ccc;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .indicator.active {
+    background-color: #000;
+  }
+  
+  .indicator:hover {
+    background-color: #666;
+  }
