UI changes for annotations

--- a/src/Pages/Landing Page/Components/LandingHeader.css
+++ b/src/Pages/Landing Page/Components/LandingHeader.css
@@ -266,7 +266,7 @@
   font-weight: 600;
   line-height: 19.12px;
   text-align: left;
-  background: linear-gradient(94.96deg, #5ea7ff -9.81%, #8c1aff 119.93%);
+  background: #1a82ff;
 }
 .icon-searchbarBackdrop {
   position: absolute;
