--- a/src/Pages/searchResult/components/searchContent.css
+++ b/src/Pages/searchResult/components/searchContent.css
@@ -164,7 +164,7 @@ button{
 }
 
 .SearchResult-Count-Filters {
-  margin: 1% 0;
+  margin: 0.5% 0;
   display: flex;
   gap: 10px;
   justify-content: space-between;
@@ -174,6 +174,9 @@ button{
   display: flex;
   height: fit-content;
   gap: 8px;
+  height: 5vh;
+  border: 1px solid #e0e0e0;
+  border-radius: 25px;
 }
 .SearchResult-Annotate {
   padding: 10px;
@@ -192,11 +195,12 @@ button{
 }
 
 .SearchResult-Annotate.active {
-  opacity: 1;
+    opacity: 1;
     pointer-events: auto;
     border: 1px solid;
     background: #0069e5;
     color: white;
+    height: fit-content;
 }
 
 /* Annotate button container */
@@ -644,12 +648,12 @@ button{
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.search-table-head {
+/* .search-table-head {
   border-bottom: 2px solid #ddd;
-}
+} */
 .search-table-body {
 
-  border-bottom: 2px solid #ddd;
+  /* border-bottom: 2px solid #ddd; */
 }
 .flex-row{
   display: flex;
@@ -664,7 +668,7 @@ button {
 }
 /* Add border-left for each th element */
 .search-table-head th {
-  border-left: 1px solid #ddd;
+  /* border-left: 1px solid #ddd; */
 }
 
 /* Add overall table border styles */
@@ -700,14 +704,14 @@ td {
   padding-right: 10px;
 }
 .search-table-head th {
-  
-  border-left: 1px solid #ddd;
+/*   
+  border-left: 1px solid #ddd; */
   border-top: 1px solid #ddd;
 }
 .search-table-body td {
   
   font-size: 12px;
-  border-left: 1px solid #ddd;
+  /* border-left: 1px solid #ddd; */
   border-top: 1px solid #ddd;
 }
 .search-table-row td {
