--- a/src/Pages/searchResult/components/searchHeader.css
+++ b/src/Pages/searchResult/components/searchHeader.css
@@ -237,9 +237,9 @@ justify-content: flex-start;
   z-index: 1;
   color: black;
 }
-.icon{
+/* .icon{
   top: 20%;
-}
+} */
 .searchHeader-autocomplete {
   /* position: absolute;  */
   /* left: 7.5%; */
